--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
@@ -31,7 +31,7 @@
     </a>
 </p>
 <p>
-    De complete handleiding als pdf downloaden.
+    De complete handleiding als pdf downloaden (de PDF komt nog).
 </p>
 
 
