--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/SocialContentStrategie.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/SocialContentStrategie.cshtml
@@ -50,7 +50,9 @@
 
             feedback? Dit heeft namelijk invloed op de onderwerpen, de planning en de vorm
 
-            van content.
+            van content. Wat zijn de tussendoelen? Denk aan het behalen van 100 likes in vier weken.
+
+            Door deze targets te stellen, kan je meten of de huidige strategie effectief is.
         </p>
 
         <h3>Welke hashtags/communities leven er ‘nu’ omheen</h3>
@@ -69,14 +71,6 @@
             gevolgd. Is dit het geval? Dan is het verstandig om deze zelf ook gaan gebruiken
 
             in Tweets.
-        </p>
-
-        <h3>Targets</h3>
-
-        <p>
-            Wat zijn de tussendoelen? Denk aan het behalen van 100 likes in vier weken.
-
-            Door deze targets te stellen, kan je meten of de huidige strategie effectief is.
         </p>
 
         <h4>Kritische succesfactoren. Kansen en gevaren.</h4>
