--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <h2>Hoe werkt het?</h2>
+            <h2>Hoe werkt Social Media?</h2>
             <p>De zakelijke Social Media accounts heb ik al, maar ik kan nog wel wat informatie gebruiken.</p>
             <p>
                 <a class="" href="~/Handleiding/InfoSocialMedia">Kort maar krachtig: wat kan je met Social Media?</a><br />
