--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Contact.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Contact.cshtml
@@ -1,17 +1,14 @@
-﻿@{
-    ViewBag.Title = "Contact";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<h1>Info</h1>
+<div class="tekst-groot">
+    <p>
+        Mijn Social Plan is gemaakt als afstudeeropdracht voor de opleiding Communication and Multimedia Design aan de HVA.
+    </p>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+    <p>
+        De inhoud en front-end is gerealiseerd door Elyse Teerink. Voor dit prototype heb ik technische ondersteuning voor de back-end gehad van Menno Morsink.
+    </p>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    <p>
+        In verband met het afstudeerproject bevat de handleiding op deze website alleen gedetailleerde informatie over Facebook en Twitter. Dit zegt niet dat de andere Social Media kanalen door gebruikers moeten worden uitgesloten. Kijk altijd goed welk kanaal het beste aansluit op de doelgroep van jouw bedrijf. In het zelf in te vullen Social plan is het wel mogelijk om alle kanalen te gebruiken.
+    </p>
+</div>
