--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
@@ -26,12 +26,12 @@
 </p>
 
 <p>
-    <a href="#">
+    <a href="~/Content/Social-contentHandleiding.pdf">
         <img class="thumbnail" src="~/Content/Images/pdf.png" alt="">
     </a>
 </p>
 <p>
-    De complete handleiding als pdf downloaden (de PDF komt nog).
+    De complete handleiding als pdf downloaden.
 </p>
 
 
