--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/Index.cshtml
@@ -26,7 +26,7 @@
 </p>
 
 <p>
-    <a href="~/Content/Social-contentHandleiding.pdf">
+    <a href="~/Content/Social-contentHandleiding.pdf" target="_blank">
         <img class="thumbnail" src="~/Content/Images/pdf.png" alt="">
     </a>
 </p>
