--- a/MijnSocialPlan/MijnSocialPlan/Views/Account/Manage.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Account/Manage.cshtml
@@ -1,7 +1,7 @@
 ﻿@using MijnSocialPlan.Models;
 @using Microsoft.AspNet.Identity;
 @{
-    ViewBag.Title = "Manage Account";
+    ViewBag.Title = "Uw account";
 }
 
 <h2>@ViewBag.Title.</h2>
