--- a/MijnSocialPlan/MijnSocialPlan/Views/SocialPlan/Create.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/SocialPlan/Create.cshtml
@@ -424,6 +424,9 @@
         <div class="tab-pane fade" id="planning">
             <h3>Planning</h3>
             <br />
+            <p>
+                <b>Comming soon!</b> Deze pagina wordt nog gemaakt.
+            </p>
         </div>
 
     </div><!--tab-->
