--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="tekst-groot">
-    <div class="jumbotron">
+    <div class="jumbotron" style="border-radius: 0px; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; ">
         <h1>&nbsp;</h1>
         <p class="lead">&nbsp;</p>
     </div>
