--- a/MijnSocialPlan/MijnSocialPlan/Content/Site.css
+++ b/MijnSocialPlan/MijnSocialPlan/Content/Site.css
@@ -18,8 +18,11 @@ h2, h3, h4 {
 }
 
 .navbar-brand {
+    /*margin: -8px 0 0 0;*/
     padding-left: 20px;
 }
+
+
 
 .jumbotron {
     background: 100% url('Images/shutterstock_116229424.jpg');
