--- a/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
                 <!--@Html.ActionLink("MijnSocialPlan.nl", "Index", "Home", null, new { @class = "navbar-brand" })-->
                 <a class="navbar-brand" href="~/">
                     &nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-thumbs-up"></span>
+                    @*<img src="~/Content/Images/logo.png" />*@
                 </a>
             </div>
             <div class="navbar-collapse collapse">
