--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/FacebookZakelijkAccount.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/FacebookZakelijkAccount.cshtml
@@ -2,13 +2,13 @@
 
 </div>
 <div class="col-lg-10">
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Facebook zakelijk account aanmaken</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
-        <li class="previous"><a href="~/Handleiding">&larr; Handleiding Index</a></li>
+        <li class="previous"><a href="~/">&larr; Home</a></li>
         <li class="next"><a href="~/Handleiding/TwitterZakelijkAccount">Twitter zakelijk account aanmaken &rarr;</a></li>
     </ul>
 
@@ -129,7 +129,7 @@
     </div>
 
     <ul class="pager">
-        <li class="previous"><a href="~/Handleiding">&larr; Handleiding Index</a></li>
+        <li class="previous"><a href="~/">&larr; Home</a></li>
         <li class="next"><a href="~/Handleiding/TwitterZakelijkAccount">Twitter zakelijk account aanmaken &rarr;</a></li>
     </ul>
 </div>
