--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HulpMetSchrijven.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HulpMetSchrijven.cshtml
@@ -4,10 +4,10 @@
 
 <div class="col-lg-10">
 
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Help! Ik ben niet zo goed in schrijven</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
         <li class="previous"><a href="~/Handleiding/HoeWerktTwitter">&larr; Hoe werkt Twitter?</a></li>
