--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/InfoSocialMedia.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/InfoSocialMedia.cshtml
@@ -4,10 +4,10 @@
 
 <div class="col-lg-10">
 
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Kort maar krachtig: wat kan je met Social Media?</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
         <li class="previous"><a href="~/Handleiding/TwitterZakelijkAccount">&larr; Twitter zakelijk account aanmaken</a></li>
