--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TwitterZakelijkAccount.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TwitterZakelijkAccount.cshtml
@@ -2,10 +2,10 @@
 
 </div>
 <div class="col-lg-10">
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Twitter zakelijk account aanmaken</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
         <li class="previous"><a href="~/Handleiding/FacebookZakelijkAccount">&larr; Facebook zakelijk account aanmaken</a></li>
