--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Contact.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Contact.cshtml
@@ -1,14 +1,37 @@
-﻿<h1>Info</h1>
-<div class="tekst-groot">
-    <p>
-        Mijn Social Plan is gemaakt als afstudeeropdracht voor de opleiding Communication and Multimedia Design aan de HVA.
-    </p>
+﻿
+<div class="col-md-12 tekst-groot">
+    <div class="col-md-10">
+        <h1>Info</h1>
+    </div>
+    
 
-    <p>
-        De inhoud en front-end is gerealiseerd door Elyse Teerink. Voor dit prototype heb ik technische ondersteuning voor de back-end gehad van Menno Morsink.
-    </p>
+    <div class="col-md-4">
+        <p>
+            Mijn Social Plan is gemaakt als afstudeeropdracht voor de opleiding Communication and Multimedia Design aan de HVA. 
+        </p>
+        <p>
+            De inhoud en frontend is gerealiseerd door Elyse Teerink. Voor dit prototype heb ik technische ondersteuning voor de backend gehad van Menno Morsink.
+        </p>
+    </div>
 
-    <p>
-        In verband met het afstudeerproject bevat de handleiding op deze website alleen gedetailleerde informatie over Facebook en Twitter. Dit zegt niet dat de andere Social Media kanalen door gebruikers moeten worden uitgesloten. Kijk altijd goed welk kanaal het beste aansluit op de doelgroep van jouw bedrijf. In het zelf in te vullen Social plan is het wel mogelijk om alle kanalen te gebruiken.
-    </p>
+    <div class="col-md-4">
+        <p>
+            Omdat deze mijnsocialplan.nl een onderdeel van mijn afstudeerproject is bevat de handleiding op deze website alleen gedetailleerde informatie over Facebook en Twitter. Dit zegt niet dat de andere Social Media kanalen door gebruikers moeten worden uitgesloten. 
+        </p>
+        <p>
+            Kijk altijd goed welk kanaal het beste aansluit op de doelgroep van jouw bedrijf. In het zelf in te vullen Social plan is het wel mogelijk om alle kanalen te gebruiken.
+        </p>
+    </div>
+
+    @*<div class="col-md-3">
+        <p>
+            ...
+        </p>
+    </div>*@
+
+    <div class="col-md-4">
+        <p>
+            <img src="~/Content/Images/elyse.jpg" />
+        </p>
+    </div>
 </div>
