--- a/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Home/Index.cshtml
@@ -12,54 +12,85 @@
         <div class="col-lg-12">
             <h1>Welkom op MijnSocialPlan.nl</h1>
             <p>
-                De online plek waar ondernemers meer leren over het zakelijk inzetten van Social Media en een Social/content plan kunnen maken. Enjoy!
+                <b>
+                    De online plek waar ondernemers meer leren over het zakelijk inzetten van Social Media en een Social/content plan kunnen maken. Enjoy!
+                </b>
             </p>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-6">
-            <h2>Social accounts</h2>
+        <div class="col-md-4">
+            <h2>Social/content strategie, wat is dat?</h2>
             <p>
-                Ik heb nog geen zakelijke accounts, wil deze wel graag aanmaken en kan wel wat hulp gebruiken.
-                Kies het kanaal*:
-            </p>
-            <p>
-                <a class="btn btn-default" href="~/Handleiding/FacebookZakelijkAccount">Facebook &raquo;</a>
-                <a class="btn btn-default" href="~/Handleiding/TwitterZakelijkAccount">Twitter &raquo;</a>
+                Op de proppen komen met een goede strategie kan een grote uitdaging zijn, maar het loont als je eenmaal begrijpt hoe het werkt. <a href="~/Handleiding/SocialContentStrategie">Lees verder</a>
             </p>
         </div>
-        <div class="col-md-6">
-            <h2>Social strategie</h2>
-            <p>Ik weet genoeg en wil een Socialplan maken.</p>
-            <p><a class="btn btn-default" href="~/SocialPlan/Create"><span class="glyphicon glyphicon-plus"></span> Nieuw plan maken</a></p>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Hoe werkt Social Media?</h2>
-            <p>De zakelijke Social Media accounts heb ik al, maar ik kan nog wel wat informatie gebruiken.</p>
+        <div class="col-md-4">
+            <h2>Kort maar krachtig: wat kan je met Social Media?</h2>
             <p>
-                <a class="" href="~/Handleiding/InfoSocialMedia">Kort maar krachtig: wat kan je met Social Media?</a><br />
-                <a class="" href="~/Handleiding/HoeWerktFacebook">Hoe werkt Facebook?</a><br />
-                <a class="" href="~/Handleiding/HoeWerktTwitter">Hoe werkt Twitter?</a>
+                Volgens Jeroen Bertrams kan je aan de hand van zijn 7-stappen model, op een verstandige wijze actief worden op Social Media. <a href="~/Handleiding/InfoSocialMedia">Lees verder</a>
             </p>
         </div>
-        <div class="col-md-6">
-            <h2>Social content</h2>
+        <div class="col-md-4">
+            <h2>Help! Ik ben niet zo goed in schrijven</h2>
             <p>
-                <a class="" href="~/Handleiding/HulpMetSchrijven">Help! Ik ben niet zo goed in schrijven</a><br />
-                <a class="" href="~/Handleiding/TipsEnTricks">Posts, Tweets… Tips & Tricks!</a><br />
-                <a class="" href="~/Handleiding/PostenOpFacebook">Posten op Facebook</a><br />
-                <a class="" href="~/Handleiding/TweetenOpTwitter">Tweeten op Twitter</a><br />
-                <a class="" href="~/Handleiding/SocialContentStrategie">Social/content strategie, wat is dat?</a>
+                Wat ook een belangrijk is op Social Media: schrijven. Want een Social/content plan kan nog zo geweldig zijn, maar als je op Social Media iets wil bereiken, dan moet je ook goede teksten schrijven. <a href="~/Handleiding/HulpMetSchrijven">Lees verder</a>
             </p>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-lg-12 home-sterretje">
+        <div class="col-md-4">
+            <h2>Hoe werkt Facebook?</h2>
+            <p>
+                Omslagfoto’s, statusupdates en een interactieve infographic. Meer weten? <a href="~/Handleiding/HoeWerktFacebook">Lees verder</a>
+            </p>
+            <p>
+                Heb je nog geen zakelijk Facebook account en kan je wel wat hulp gebruiken bij het aanmaken daarvan? Klik <a href="~/Handleiding/FacebookZakelijkAccount">hier</a>.
+            </p>
+        </div>
+        <div class="col-md-4">
+            <h2>Hoe werkt Twitter?</h2>
+            <p>
+                Wat zijn tweets, retweets en hashtags? Hoe plaats je een tweet, wat zijn trends en een interactieve infographic… Meer weten? <a href="~/Handleiding/HoeWerktTwitter">Lees verder</a>
+            </p>
+            <p>
+                Heb je nog geen zakelijk Twitter account en kan je wel wat hulp gebruiken bij het aanmaken daarvan? Klik <a href="~/Handleiding/TwitterZakelijkAccount">hier</a>.
+            </p>
+        </div>
+        <div class="col-md-4">
+            <h2>Posts, Tweets... Tips & Tricks</h2>
+            <p>
+                Je hebt een Social Media account, je weet wat je ermee kan en nu denk je wellicht: ‘Ehm, en nu?’. Nu is het belangrijk dat je weet hoe je moet posten en hoe je meer interactie creëert met volgers. <a href="~/Handleiding/TipsEnTricks">Lees verder</a>
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        
+        <div class="col-md-4">
+            <h2>Posten of Facebook</h2>
+            <p>
+                Er zijn via Google duizenden artikels te vinden die je meer kunnen vertellen over zakelijk posten op Facebook. Hier heb ik er eentje van uitgekozen om jou te helpen bij het beginnen met posten. <a href="~/Handleiding/PostenOpFacebook">Lees verder</a>
+            </p>
+        </div>
+        <div class="col-md-4">
+            <h2>Tweeten op Twitter</h2>
+            <p>
+                Als nog niemand je volgt, kan het twitteren je het gevoel geven dat je voor een lege zaal staat te spreken. Doe het toch! Het is belangrijk voor twitteraars om te zien wat jouw bedrijf te melden heeft. <a href="~/Handleiding/TweetenOpTwitter">Lees verder</a>
+            </p>
+            
+        </div>
+        <div class="col-md-4">
+            <h2>Contentstrategie</h2>
+            <p>De laatste stap is het maken van een Social/content strategie. Ben je er klaar voor? Pak een kopje koffie, ga lekker zitten en neem er even goed de tijd voor...</p>
+            <p><a class="btn btn-success" href="~/SocialPlan/Create"><span class="glyphicon glyphicon-plus"></span> Nieuw plan maken</a></p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12 home-sterretje">
             <p>
                 *Momenteel bevat het informatieve deel van deze website alleen informatie over Facebook en Twitter. Het zelf in te vullen plan (de contentstrategie) is te gebruiken voor elk gewenst Social Media kanaal.
             </p>
