--- a/MijnSocialPlan/MijnSocialPlan/Content/Site.css
+++ b/MijnSocialPlan/MijnSocialPlan/Content/Site.css
@@ -18,8 +18,8 @@ h2, h3, h4 {
 }
 
 .navbar-brand {
-    /*margin: -8px 0 0 0;*/
-    padding-left: 20px;
+    margin: -8px 0 0 0;
+    /*padding-left: 20px;*/
 }
 
 
