--- a/MijnSocialPlan/MijnSocialPlan/Views/Account/Register.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Account/Register.cshtml
@@ -3,12 +3,12 @@
     ViewBag.Title = "Registreren";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Maak een nieuw account aan.</h4>
+    <h4>Maak een nieuw account aan</h4>
     <hr />
     @Html.ValidationSummary()
     <div class="form-group">
