--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktFacebook.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktFacebook.cshtml
@@ -4,10 +4,10 @@
 
 <div class="col-lg-10">
 
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Hoe werkt Facebook?</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
         <li class="previous"><a href="~/Handleiding/InfoSocialMedia">&larr; Kort maar krachtig: wat kan je met Social Media?</a></li>
