--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktTwitter.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/HoeWerktTwitter.cshtml
@@ -4,10 +4,10 @@
 
 <div class="col-lg-10">
 
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Hoe werkt Twitter?</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
         <li class="previous"><a href="~/Handleiding/HoeWerktFacebook">&larr; Hoe werkt Facebook?</a></li>
