--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/PostenOpFacebook.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/PostenOpFacebook.cshtml
@@ -4,10 +4,10 @@
 
 <div class="col-lg-10">
 
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Posten op Facebook</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
         <li class="previous"><a href="~/Handleiding/TipsEnTricks">&larr; Posts, tweets… Tips & Tricks!</a></li>
