--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TipsEnTricks.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TipsEnTricks.cshtml
@@ -4,10 +4,10 @@
 
 <div class="col-lg-10">
 
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Posts, tweets… Tips & Tricks!</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
         <li class="previous"><a href="~/Handleiding/HulpMetSchrijven">&larr; Help! Ik ben niet zo goed in schrijven</a></li>
