--- a/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TweetenOpTwitter.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Handleiding/TweetenOpTwitter.cshtml
@@ -4,10 +4,10 @@
 
 <div class="col-lg-10">
 
-    <ol class="breadcrumb">
+    @*<ol class="breadcrumb">
         <li><a href="~/Handleiding">Handleiding Index</a></li>
         <li class="active">Tweeten op Twitter</li>
-    </ol>
+    </ol>*@
 
     <ul class="pager">
         <li class="previous"><a href="~/Handleiding/PostenOpFacebook">&larr; Posten op Facebook</a></li>
